Release 1.27.0 (#170)
* Release 1.27.0

* ApphubCI - Run integration tests by name

* Monitoring - Hidden property does not count when calculating max value

* Integration - Fix exceptionally high network usage when starting WebDrivers

* User, Storage - Remove deprecated tables

* Storage - Migrate files from FTP to S3

* EliteBase - Make buffer synchronization more frequent and smaller

* Fix Custom Table File Upload

* Notebook - PostgreSQL to DynamoDB (#171)

* Notebook - PostgreSQL to DynamoDB

* Table

* Clone and compile

* Service starts

* Implementing daos pt I

* Implementing daos pt II

* Eureka!

* Migration

* Content key UUID

* Fix

* Fix

* Rework ColumnData saving

* Fix migration

* Fix deletion

* TODO elimination Pt I.

* TODO elimination Pt II.

* Notebook - ListItem table documentation

* Calendar - DynamoDB migration (#172)

* Calendar - DynamoDB migration

* Calendar - Rename old dao packages and classes

* Calendar - Rewire to new daos

* Calendar - Dao and repository implementation

* Calendar - Fixing Dao and repository implementation...

* Calendar - Fixed Dao and repository implementation

* Calendar - Migration

* Calendar - Localizing flaws

* Calendar - TODO elimination - DynamoDB as a platform

* Calendar - TODO elimination - Unit tests