@@ -35,7 +35,7 @@ public class CustomTableTextTest extends BackEndTest {
 
         UUID listItemId = CategoryActions.getChildrenOfCategory(getServerPort(), accessToken, null)
             .getChildren()
-            .get(0)
+            .getFirst()
             .getId();
         TableResponse tableResponse = TableActions.getTable(getServerPort(), accessToken, listItemId);
 
@@ -47,10 +47,10 @@ public class CustomTableTextTest extends BackEndTest {
     private void edit(String accessToken, UUID listItemId, TableResponse tableResponse) {
         EditTableRequest editTableRequest = CustomTableUtils.createEditCustomTableRequest(
             NEW_TITLE,
-            tableResponse.getTableHeads().get(0).getTableHeadId(),
+            tableResponse.getTableHeads().getFirst().getTableHeadId(),
             NEW_COLUMN_TITLE,
-            tableResponse.getRows().get(0).getRowId(),
-            tableResponse.getRows().get(0).getColumns().get(0).getColumnId(),
+            tableResponse.getRows().getFirst().getRowId(),
+            tableResponse.getRows().getFirst().getColumns().getFirst().getColumnId(),
             ColumnType.TEXT,
             ""
         );
@@ -60,8 +60,8 @@ public class CustomTableTextTest extends BackEndTest {
         tableResponse = TableActions.getTable(getServerPort(), accessToken, listItemId);
 
         assertThat(tableResponse.getTitle()).isEqualTo(NEW_TITLE);
-        assertThat(tableResponse.getTableHeads().get(0).getContent()).isEqualTo(NEW_COLUMN_TITLE);
-        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getData()).isEqualTo("");
+        assertThat(tableResponse.getTableHeads().getFirst().getContent()).isEqualTo(NEW_COLUMN_TITLE);
+        assertThat(tableResponse.getRows().getFirst().getColumns().getFirst().getData()).isEqualTo("");
     }
 
     private void create(String accessToken) {
@@ -75,6 +75,6 @@ public class CustomTableTextTest extends BackEndTest {
 
         Response response = TableActions.getCreateTableResponse(getServerPort(), accessToken, request);
 
-        ResponseValidator.verifyInvalidParam(response, "text", "must not be null");
+        ResponseValidator.verifyInvalidParam(response, "data", "must not be null");
     }
 }
