@@ -1,10 +1,10 @@
 package com.github.saphyra.apphub.service.notebook.service.category;
 
+import com.github.saphyra.apphub.api.feature.notebook.model.ListItemType;
 import com.github.saphyra.apphub.api.feature.notebook.model.response.ChildrenOfCategoryResponse;
 import com.github.saphyra.apphub.api.feature.notebook.model.response.NotebookView;
-import com.github.saphyra.apphub.service.notebook.dao.list_item.ListItem;
-import com.github.saphyra.apphub.service.notebook.dao.list_item.ListItemDao;
-import com.github.saphyra.apphub.api.feature.notebook.model.ListItemType;
+import com.github.saphyra.apphub.service.notebook.dao.list_item.list_item.ListItem;
+import com.github.saphyra.apphub.service.notebook.dao.list_item.list_item.ListItemDao;
 import com.github.saphyra.apphub.service.notebook.service.NotebookViewFactory;
 import com.github.saphyra.apphub.test.common.ExceptionValidator;
 import org.junit.jupiter.api.Test;
@@ -14,6 +14,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -59,7 +60,7 @@ public class CategoryChildrenQueryServiceTest {
             .type(ListItemType.CHECKLIST)
             .title(TITLE_1)
             .build();
-        given(listItemDao.getByUserIdAndParent(USER_ID, CATEGORY_ID)).willReturn(Arrays.asList(listItem));
+        given(listItemDao.getByUserIdAndParent(USER_ID, CATEGORY_ID)).willReturn(Collections.singletonList(listItem));
         given(notebookViewFactory.create(listItem)).willReturn(notebookView);
 
         ChildrenOfCategoryResponse result = underTest.getChildrenOfCategory(USER_ID, CATEGORY_ID, "", null);
@@ -94,7 +95,7 @@ public class CategoryChildrenQueryServiceTest {
         assertThat(result.getTitle()).isNull();
         assertThat(result.getChildren()).hasSize(1);
         assertThat(result.getListItemType()).isEqualTo(ListItemType.CATEGORY);
-        assertThat(result.getChildren().get(0)).isEqualTo(notebookView);
+        assertThat(result.getChildren().getFirst()).isEqualTo(notebookView);
     }
 
     @Test
@@ -126,7 +127,7 @@ public class CategoryChildrenQueryServiceTest {
             .parent(PARENT)
             .title(TITLE_2)
             .build();
-        given(listItemDao.findById(CATEGORY_ID)).willReturn(Optional.of(parent));
+        given(listItemDao.findById(USER_ID, CATEGORY_ID)).willReturn(Optional.of(parent));
         given(notebookViewFactory.create(listItem2)).willReturn(notebookView);
 
         ChildrenOfCategoryResponse result = underTest.getChildrenOfCategory(USER_ID, CATEGORY_ID, ListItemType.CATEGORY.name(), LIST_ITEM_ID_3);
